@@ -6,6 +6,9 @@
 * Adyen: Return AVS and CVC Result [nfarve] #3044
 * Braintree: Account for nil address with existing customer [curiousepic] #3047
 * Optimal Payment: Add verify capabilities #3052
+* Cenpos: update supported countries [bpollack] #3055
+* CyberSource: update supported countries [bpollack] #3055
+* MiGS: update supported countries [bpollack] #3055
 
 == Version 1.86.0 (October 26, 2018)
 * UsaEpayTransaction: Support UMcheckformat option for echecks [dtykocki] #3002
